--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,7 @@
 # This is the main configuration file for the application.
 # ~~~~~
+mongodb.default.db = "entertainer_test"
+evolutionplugin=disabled
 
 # Secret key
 # ~~~~~
